lib_LTLIBRARIES = libinifile++.la
libinifile___la_SOURCES = \
	   parser.cpp inifile++/parser.hpp lexer.cpp inifile++/lexer.hpp \
	   token.cpp inifile++/token.hpp
libinifile___la_LDFLAGS = -version-info 2:0:0	   
nobase_include_HEADERS = \
	   inifile++/lexer.hpp  inifile++/parser.hpp inifile++/token.hpp \
	   inifile++/lib.hpp
INCLUDES = -I$(top_srcdir)/src/cxx/inifile++
